--- a/index.html
+++ b/index.html
@@ -9,4 +9,13 @@
   <body>
     hello world
   </body>
+  <script>
+    var _hmt = _hmt || [];
+    (function() {
+      var hm = document.createElement('script');
+      hm.src = 'https://hm.baidu.com/hm.js?2dcb6644739ae08a1748c45fb4cea087';
+      var s = document.getElementsByTagName('script')[0];
+      s.parentNode.insertBefore(hm, s);
+    })();
+  </script>
 </html>
